# aud-ws201415

./: .gitignore  README.md
src/: CMakeLists.txt
src/e04/: CMakeLists.txt  a04.c  a3.c
src/e05/: CMakeLists.txt  a2.c  a3.c  a4.c  a4a.c  a4b-efficient.c  a4b-naive.c  s3.c
src/e06/: CMakeLists.txt  a2-best.c  a2-better.c  a2-naive.c  a2.c  a3-supplemental.c  a3-supplemental.h  a3.c  readline.c  readline.h
src/e07/: CMakeLists.txt  Readme.md  a3.c  list.c  list.h  tree.c  tree.h
src/e07/a2/: dub-copy.c  dub-inplace.c  sum-iterative.c  sum-recursive.c  test-dub.c  test-sum.c
src/e07/a3/: insert-iterative-dp.c  insert-iterative-rv.c  insert-recursive-dp.c  insert-recursive-rv.c  insert.c  removeEvens-iterative-dp.c  removeEvens-recursive-rv.c  removeEvens.c  test-insert-dp.c  test-insert-rv.c  test-removeEvens-dp.c  test-removeEvens-rv.c
src/e07/a4/: baz.c  leafprod.c  test-baz.c  test-leafprod.c
src/e08/: CMakeLists.txt  a1a.c  a1b.c  test-a1a.c  test-a1b.c
src/e09/: a1.c
